[package]
name = "sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = { version = "0.10.0", features = ["integrated-auth-gssapi"] }
async-std = { version = "1.12.0", features = ["attributes"] } 
anyhow = "1.0.61"